--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
                                 animate__animated zoomIn animate__delay-03s"></div>
                             </div>
                             <div class="portfolio_block-button">
-                                <a href="">Більше фото</a>
+                                <a href="https://vladhrytsaiuk.github.io/photographer_Yulia/portfolio.html">Більше
+                                    фото</a>
                             </div>
                         </div>
                     </div>
