--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                         <div class="portfolio_block-photo portfolio_block-photo-9"></div>
                     </div>
                     <div class="portfolio_block-button">
-                        <a href="">На головну</a>
+                        <a href="https://vladhrytsaiuk.github.io/photographer_Yulia/index.html">На головну</a>
                     </div>
                 </div>
             </section>
